--- a/Simulador Financeiro/Simulador Financeiro.html
+++ b/Simulador Financeiro/Simulador Financeiro.html
@@ -57,29 +57,14 @@
         var tipo = in_tipo.value
         var quantidade = Number(in_quantidade.value)
         var valor = Number(in_valor.value)
-        var media = (quantidade + tempo) / 2 * valor
+        var media = ((quantidade + tempo) / 2) * valor
+        var mediaLucro = (media) * 0.06
+        var lucro = (mediaLucro) + (media)
+
 
         div_mensagem.innerHTML = 'Você irá pagar R$ 500,00 por nossa solução de controle de temperatura e umidade.<br>'
 
-
-        if (tipo == 'Tinto') {
-            div_mensagem.innerHTML += `<br>O seu vinho do tipo tinto irá se valorizar em 5% ao ano ao final de ${tempo} ano(s) você terá o lucro de R$ ${(media) * 0.05} Totalizando R$ ${((media) * 0.05) + (media)}.`
-        } else if (tipo == 'tinto') {
-            div_mensagem.innerHTML += `<br>O seu vinho do tipo tinto irá se valorizar em 5% ao ano ao final de ${tempo} ano(s) você terá o lucro de R$ ${(media) * 0.05} Totalizando R$ ${((media) * 0.05) + (media)}.`
-        }
-
-        if (tipo == 'Suave') {
-            div_mensagem.innerHTML += `<br>O seu vinho do tipo Suave irá se valorizar em 7% ao ano. Ao final de ${tempo} ano(s) você terá o lucro de R$ ${(media) * 0.07} Totalizando R$ ${((media) * 0.07) + (media)}.`
-        } else if (tipo == 'suave') {
-            div_mensagem.innerHTML += `<br>O seu vinho do tipo Suave irá se valorizar em 7% ao ano. Ao final de ${tempo} ano(s) você terá o lucro de R$ ${(media) * 0.07} Totalizando R$ ${((media) * 0.07) + (media)}.`
-        }
-
-        if (tipo == 'Rosé') {
-            div_mensagem.innerHTML += `<br>O seu vinho do tipo Rosé irá se valorizar em 6% ao ano. Ao final de ${tempo} ano(s) você terá o lucro de R$ ${(media) * 0.06} Totalizando R$ ${((media) * 0.06) + (media)}.`
-        } else if (tipo == 'rosé') {
-            div_mensagem.innerHTML += `<br>O seu vinho do tipo Rosé irá se valorizar em 6% ao ano. Ao final de ${tempo} ano(s) você terá o lucro de R$ ${(media) * 0.06} Totalizando R$ ${((media) * 0.06) + (media)}.`
-        }
-
+        div_mensagem.innerHTML += `<br>O seu vinho do tipo ${tipo} irá se valorizar em media 6% ao ano. Ao final de ${tempo} ano(s) você terá o lucro de R$ ${mediaLucro} Totalizando, em média, R$ ${lucro}.`
     }
-
+    
 </script>
