--- a/Simulador Financeiro/Simulador Financeiro.html
+++ b/Simulador Financeiro/Simulador Financeiro.html
@@ -59,10 +59,38 @@
         var conta = capital * (1 + 0.06)** tempo
         var lucro = conta - capital - 2000
 
+        if (quantidade == ''){
+            alert ('Por favor, informe a quantidade de vinhos que você tem armazenado!')
+        }
+
+        else{
+
+            if (tempo == ''){
+                alert ('Por favor, informe o tempo que você pretende deixar armazenado!')
+            }
+
+            else{
+
+                if (tipo == ''){
+                alert ('Por favor, informe o tipo do vinho que você pretende deixar armazenado!')
+            }
+
+            else{
+
+                if (valor == ''){
+                alert ('Por favor, informe o valor médio que você vende seus vinhos!')
+            }
+
+            else{
 
         div_mensagem.innerHTML = 'Você irá pagar R$ 2000,00 por nossa solução de controle de temperatura e umidade.<br>'
 
         div_mensagem.innerHTML += `<br>O seu vinho do tipo ${tipo} irá se valorizar em media 6% ao ano. Ao final de ${tempo} ano(s) você terá o lucro de R$ ${(conta).toFixed(2)} Totalizando, em média, R$ ${(lucro).toFixed(2)}.`
+
+            }
+            }
+            }
+            }
     }
     
 </script>
