Add no script IF e ELSE e ALERT

--- a/Simulador Financeiro/Simulador Financeiro.html
+++ b/Simulador Financeiro/Simulador Financeiro.html
@@ -51,6 +51,8 @@
 
     function calculo() {
 
+        div_mensagem.innerHTML = ''
+        
         var tempo = Number(in_tempo.value)
         var tipo = in_tipo.value
         var quantidade = Number(in_quantidade.value)
