'eu add comentários no script do simulador!'

--- a/Simulador Financeiro/Simulador Financeiro.html
+++ b/Simulador Financeiro/Simulador Financeiro.html
@@ -92,7 +92,7 @@
 
             else{
                 
-/* Se todos os campos estiverem ok, o simulador irá mostrar a mensagem normalmente. */
+/* Se todos os campos estiverem ok, o simulador irá mostrar a mensagem normalmente... */
 
          div_mensagem.innerHTML = 'Você irá pagar R$ 2000,00 por nossa solução de controle de temperatura e umidade.<br>'
 
