--- a/Simulador Financeiro/Simulador Financeiro.html
+++ b/Simulador Financeiro/Simulador Financeiro.html
@@ -92,7 +92,7 @@
 
                         /* Se todos os campos estiverem ok, o simulador irá mostrar a mensagem normalmente... */
 
-                        div_mensagem.innerHTML += `<br>O seu vinho do tipo ${tipo} irá se valorizar no mínimo 6% ao ano. Ao final de ${tempo} ano(s) o seu vinho irá se valorizar em media R$ ${(conta).toFixed(2)} Totalizando, em média, R$ ${(receita).toFixed(2)}.`
+                        div_mensagem.innerHTML += `<br>O seu vinho do tipo ${tipo} irá se valorizar no mínimo 6% ao ano. Ao final de ${tempo} ano(s) o valor agregado com seu investimento estará por volta de R$${(conta).toFixed(2)}. Ao final, a sua renda adicional será de R$${(receita).toFixed(2)}.`
 
                     }
                 }
